Fix jma feed drop